--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,10 @@
 # Ignore node_modules directory
 node_modules/
 
+#ignore output directory
+output/
+
 # Ignore environment variable files
 .env
+
+pdfservices-api-credentials.json
